had to fix some stuff with routers
